log
Thu Apr 21 15:17:21 HSP 2022: 
 treemap.c | 13 ++++++++++---
 1 file changed, 10 insertions(+), 3 deletions(-)
test.c:6:8: error: '_strdup' redeclared without dllimport attribute: previous dllimport ignored [-Werror=attributes]
 char * _strdup(const char * str) {
        ^~~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
bb75d31
